@@ -2,5 +2,5 @@ import-error:7:0:7:18::Unable to import 'nonexistant':UNDEFINED
 non-parent-init-called:15:8:15:26:AAAA.__init__:__init__ method from a non direct base class 'BBBBMixin' is called:UNDEFINED
 no-member:23:50:23:77:CCC:Module 'functional.n.non.non_init_parent_called' has no 'BBBB' member:INFERENCE
 no-member:28:8:28:35:CCC.__init__:Module 'functional.n.non.non_init_parent_called' has no 'BBBB' member:INFERENCE
-super-init-not-called:49:4:51:25:Super2.__init__:__init__ method from base class 'dict' is not called:UNDEFINED
+super-init-not-called:49:4:51:25:Super2.__init__:__init__ method from base class 'dict' is not called:INFERENCE
 no-member:51:8:51:23:Super2.__init__:Super of 'Super2' has no '__woohoo__' member:INFERENCE
