@@ -1,0 +1,2 @@
+[testoptions]
+max_pyver=3.9
